SERVER-82459 Avoid quickExit when a thread receives two fatal signals